/*
 * Copyright (c) 2013-2023 the original author or authors.
 *
 * MIT License
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
 * associated documentation files (the "Software"), to deal in the Software without restriction,
 * including without limitation the rights to use, copy, modify, merge, publish, distribute,
 * sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all copies or
 * substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
 * NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
 * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */
package eapli.base.infrastructure.persistence;

import eapli.base.ClassManagement.application.repositories.ClassRepository;
import eapli.base.boardManagement.repositories.BoardRepository;
import eapli.base.boardManagement.repositories.ColumnRepository;
import eapli.base.boardManagement.repositories.PostitRepository;
import eapli.base.boardManagement.repositories.RowRepository;
import eapli.base.clientusermanagement.repositories.ClientUserRepository;
import eapli.base.clientusermanagement.repositories.SignupRequestRepository;
import eapli.base.coursemanagement.repositories.CourseRepository;
import eapli.base.examManagement.domain.automaticExamDomain.AutomaticFormativeExam;
import eapli.base.examManagement.repositories.AutomaticFormativeExamRepository;
import eapli.base.examManagement.repositories.ExamRepository;
import eapli.base.examManagement.repositories.QuestionRepository;
import eapli.base.gradeManagement.repositories.GradeRepository;
import eapli.base.managerManagement.repositories.ManagerRepository;
import eapli.base.meetingsManagement.repositories.MeetingRepository;
import eapli.base.meetingsManagement.repositories.MeetingsRepository;
import eapli.base.requestManagement.repositories.EnrollmentRequestRepository;
import eapli.base.studentCourseManagment.repository.StudentCourseRepository;
import eapli.base.studentCourseManagment.repositories.StudentRepository;
import eapli.base.teacherManagement.repositories.TeacherRepository;
import eapli.framework.domain.repositories.TransactionalContext;
import eapli.framework.infrastructure.authz.domain.repositories.UserRepository;

/**
 * @author Paulo Gandra Sousa
 *
 */
public interface RepositoryFactory {

    /**
     * factory method to create a transactional context to use in the repositories
     *
     * @return
     */
    TransactionalContext newTransactionalContext();

    /**
     *
     * @param autoTx
     *            the transactional context to enrol
     * @return
     */
    UserRepository users(TransactionalContext autoTx);

    /**
     * repository will be created in auto transaction mode
     *
     * @return
     */
    UserRepository users();

    /**
     *
     * @param autoTx
     *            the transactional context to enroll
     * @return
     */
    ClientUserRepository clientUsers(TransactionalContext autoTx);

    /**
     * repository will be created in auto transaction mode
     *
     * @return
     */
    ClientUserRepository clientUsers();

    /**
     *
     * @param autoTx
     *            the transactional context to enroll
     * @return
     */
    SignupRequestRepository signupRequests(TransactionalContext autoTx);

    /**
     * repository will be created in auto transaction mode
     *
     * @return
     */
    SignupRequestRepository signupRequests();

    TeacherRepository teachers();

    CourseRepository courses();

    MeetingsRepository meetingss();

    BoardRepository boards();

    RowRepository rows();

    ColumnRepository columns();

    EnrollmentRequestRepository enrollmentRequests();

    ClassRepository classes(TransactionalContext autoTx);

    ClassRepository classes();

    StudentRepository students();

    ManagerRepository managers();

    CourseRepository courses(TransactionalContext autoTx);
    MeetingsRepository meetingss(TransactionalContext autoTx);

    BoardRepository boards(TransactionalContext autoTx);

    RowRepository rows(TransactionalContext autoTx);

    ColumnRepository columns(TransactionalContext autoTx);
    MeetingRepository meetings(TransactionalContext autoTx);

    MeetingRepository meetings();

    StudentCourseRepository studentCourses(TransactionalContext txCtx);

    StudentRepository studentUsers(TransactionalContext txCtx);

    EnrollmentRequestRepository enrollmentRequests(TransactionalContext txCtx);

    ExamRepository exams(/*TransactionalContext autoTx*/);

    GradeRepository grades();

    QuestionRepository question();
    PostitRepository postits(TransactionalContext autoTx);

    PostitRepository postits();

    AutomaticFormativeExamRepository automaticExam();


}
